crates/ty_server/tests/e2e/snapshots/e2e__code_actions__code_action_attribute_access_on_unimported.snap
---
source: crates/ty_server/tests/e2e/code_actions.rs
expression: code_actions
---
[
  {
    "title": "import typing",
    "kind": "quickfix",
    "diagnostics": [
      {
        "range": {
          "start": {
            "line": 0,
            "character": 3
          },
          "end": {
            "line": 0,
            "character": 9
          }
        },
        "severity": 1,
        "code": "unresolved-reference",
        "codeDescription": {
          "href": "https://ty.dev/rules#unresolved-reference"
        },
        "source": "ty",
        "message": "Name `typing` used when not defined"
      }
    ],
    "isPreferred": true,
    "edit": {
      "changes": {
        "file://<temp_dir>/src/foo.py": [
          {
            "range": {
              "start": {
                "line": 0,
                "character": 0
              },
              "end": {
                "line": 0,
                "character": 0
              }
            },
            "newText": "import typing\n"
          }
        ]
      }
    }
  },
  {
    "title": "Ignore 'unresolved-reference' for this line",
    "kind": "quickfix",
    "diagnostics": [
      {
        "range": {
          "start": {
            "line": 0,
            "character": 3
          },
          "end": {
            "line": 0,
            "character": 9
          }
        },
        "severity": 1,
        "code": "unresolved-reference",
        "codeDescription": {
          "href": "https://ty.dev/rules#unresolved-reference"
        },
        "source": "ty",
        "message": "Name `typing` used when not defined"
      }
    ],
    "isPreferred": false,
    "edit": {
      "changes": {
        "file://<temp_dir>/src/foo.py": [
          {
            "range": {
              "start": {
                "line": 0,
                "character": 24
              },
              "end": {
                "line": 0,
                "character": 24
              }
            },
            "newText": "  # ty: ignore[unresolved-reference]"
          }
        ]
      }
    }
  }
]
