crates/ty_server/tests/e2e/snapshots/e2e__code_actions__code_action_existing_import_undefined_decorator.snap
---
source: crates/ty_server/tests/e2e/code_actions.rs
expression: code_actions
---
[
  {
    "title": "import warnings.deprecated",
    "kind": "quickfix",
    "diagnostics": [
      {
        "range": {
          "start": {
            "line": 3,
            "character": 1
          },
          "end": {
            "line": 3,
            "character": 11
          }
        },
        "severity": 1,
        "code": "unresolved-reference",
        "codeDescription": {
          "href": "https://ty.dev/rules#unresolved-reference"
        },
        "source": "ty",
        "message": "Name `deprecated` used when not defined"
      }
    ],
    "isPreferred": true,
    "edit": {
      "changes": {
        "file://<temp_dir>/src/foo.py": [
          {
            "range": {
              "start": {
                "line": 0,
                "character": 0
              },
              "end": {
                "line": 0,
                "character": 0
              }
            },
            "newText": "from warnings import deprecated\n"
          }
        ]
      }
    }
  },
  {
    "title": "import typing_extensions.deprecated",
    "kind": "quickfix",
    "diagnostics": [
      {
        "range": {
          "start": {
            "line": 3,
            "character": 1
          },
          "end": {
            "line": 3,
            "character": 11
          }
        },
        "severity": 1,
        "code": "unresolved-reference",
        "codeDescription": {
          "href": "https://ty.dev/rules#unresolved-reference"
        },
        "source": "ty",
        "message": "Name `deprecated` used when not defined"
      }
    ],
    "isPreferred": true,
    "edit": {
      "changes": {
        "file://<temp_dir>/src/foo.py": [
          {
            "range": {
              "start": {
                "line": 0,
                "character": 0
              },
              "end": {
                "line": 0,
                "character": 0
              }
            },
            "newText": "from typing_extensions import deprecated\n"
          }
        ]
      }
    }
  },
  {
    "title": "qualify warnings.deprecated",
    "kind": "quickfix",
    "diagnostics": [
      {
        "range": {
          "start": {
            "line": 3,
            "character": 1
          },
          "end": {
            "line": 3,
            "character": 11
          }
        },
        "severity": 1,
        "code": "unresolved-reference",
        "codeDescription": {
          "href": "https://ty.dev/rules#unresolved-reference"
        },
        "source": "ty",
        "message": "Name `deprecated` used when not defined"
      }
    ],
    "isPreferred": true,
    "edit": {
      "changes": {
        "file://<temp_dir>/src/foo.py": [
          {
            "range": {
              "start": {
                "line": 3,
                "character": 1
              },
              "end": {
                "line": 3,
                "character": 11
              }
            },
            "newText": "warnings.deprecated"
          }
        ]
      }
    }
  },
  {
    "title": "Ignore 'unresolved-reference' for this line",
    "kind": "quickfix",
    "diagnostics": [
      {
        "range": {
          "start": {
            "line": 3,
            "character": 1
          },
          "end": {
            "line": 3,
            "character": 11
          }
        },
        "severity": 1,
        "code": "unresolved-reference",
        "codeDescription": {
          "href": "https://ty.dev/rules#unresolved-reference"
        },
        "source": "ty",
        "message": "Name `deprecated` used when not defined"
      }
    ],
    "isPreferred": false,
    "edit": {
      "changes": {
        "file://<temp_dir>/src/foo.py": [
          {
            "range": {
              "start": {
                "line": 3,
                "character": 28
              },
              "end": {
                "line": 3,
                "character": 28
              }
            },
            "newText": "  # ty: ignore[unresolved-reference]"
          }
        ]
      }
    }
  }
]
