crates/ty_server/tests/e2e/snapshots/e2e__code_actions__code_action_undefined_reveal.snap
---
source: crates/ty_server/tests/e2e/code_actions.rs
expression: code_actions
---
[
  {
    "title": "Import `reveal_type` from `typing`",
    "kind": "quickfix",
    "diagnostics": [
      {
        "range": {
          "start": {
            "line": 0,
            "character": 0
          },
          "end": {
            "line": 0,
            "character": 11
          }
        },
        "severity": 2,
        "code": "undefined-reveal",
        "codeDescription": {
          "href": "https://ty.dev/rules#undefined-reveal"
        },
        "source": "ty",
        "message": "`reveal_type` used without importing it\n\ninfo: This is allowed for debugging convenience but will fail at runtime\nhelp: Import `reveal_type` from `typing`"
      }
    ],
    "isPreferred": false,
    "edit": {
      "changes": {
        "file://<temp_dir>/src/foo.py": [
          {
            "range": {
              "start": {
                "line": 0,
                "character": 0
              },
              "end": {
                "line": 0,
                "character": 0
              }
            },
            "newText": "from typing import reveal_type\n"
          }
        ]
      }
    }
  },
  {
    "title": "Ignore 'undefined-reveal' for this line",
    "kind": "quickfix",
    "diagnostics": [
      {
        "range": {
          "start": {
            "line": 0,
            "character": 0
          },
          "end": {
            "line": 0,
            "character": 11
          }
        },
        "severity": 2,
        "code": "undefined-reveal",
        "codeDescription": {
          "href": "https://ty.dev/rules#undefined-reveal"
        },
        "source": "ty",
        "message": "`reveal_type` used without importing it\n\ninfo: This is allowed for debugging convenience but will fail at runtime\nhelp: Import `reveal_type` from `typing`"
      }
    ],
    "isPreferred": false,
    "edit": {
      "changes": {
        "file://<temp_dir>/src/foo.py": [
          {
            "range": {
              "start": {
                "line": 0,
                "character": 14
              },
              "end": {
                "line": 0,
                "character": 14
              }
            },
            "newText": "  # ty: ignore[undefined-reveal]"
          }
        ]
      }
    }
  }
]
