crates/ty_server/tests/e2e/snapshots/e2e__code_actions__code_action_unsafe_fix.snap
---
source: crates/ty_server/tests/e2e/code_actions.rs
expression: code_actions
---
[
  {
    "title": "Remove the unused suppression comment",
    "kind": "quickfix",
    "diagnostics": [
      {
        "range": {
          "start": {
            "line": 0,
            "character": 0
          },
          "end": {
            "line": 0,
            "character": 31
          }
        },
        "severity": 2,
        "code": "unused-ignore-comment",
        "codeDescription": {
          "href": "https://ty.dev/rules#unused-ignore-comment"
        },
        "source": "ty",
        "message": "Unused `ty: ignore` directive\n\nhelp: Remove the unused suppression comment",
        "tags": [
          1
        ]
      }
    ],
    "isPreferred": false,
    "edit": {
      "changes": {
        "file://<temp_dir>/src/foo.py": [
          {
            "range": {
              "start": {
                "line": 0,
                "character": 0
              },
              "end": {
                "line": 0,
                "character": 31
              }
            },
            "newText": ""
          }
        ]
      }
    }
  },
  {
    "title": "Ignore 'unused-ignore-comment' for this line",
    "kind": "quickfix",
    "diagnostics": [
      {
        "range": {
          "start": {
            "line": 0,
            "character": 0
          },
          "end": {
            "line": 0,
            "character": 31
          }
        },
        "severity": 2,
        "code": "unused-ignore-comment",
        "codeDescription": {
          "href": "https://ty.dev/rules#unused-ignore-comment"
        },
        "source": "ty",
        "message": "Unused `ty: ignore` directive\n\nhelp: Remove the unused suppression comment",
        "tags": [
          1
        ]
      }
    ],
    "isPreferred": false,
    "edit": {
      "changes": {
        "file://<temp_dir>/src/foo.py": [
          {
            "range": {
              "start": {
                "line": 0,
                "character": 41
              },
              "end": {
                "line": 0,
                "character": 41
              }
            },
            "newText": "  # ty: ignore[unused-ignore-comment]"
          }
        ]
      }
    }
  }
]
